# trading_agent_ultra

./: .env.example  .gitignore  README.md  full_prompt.txt  pyproject.toml  requirements.txt
agents/: __init__.py  contracts.py  events.py  runtime.py
alembic/: env.py
app/: container.py  main.py  settings.py
company/: constants.py  models.py  repository.py  schemas.py  service.py
contracts/: common_types.py  company_contracts.py  confidence.py  delta.py  enums.py  industry_contracts.py  integration_contracts.py  macro_contracts.py  material_change.py  service_ports.py  signals_contracts.py  source_refs.py
docs/: PRD_v1.md  V1_release_iteration_checklist.md  macro_digest_recipients.md  macro_eval_feedback_template.csv  macro_eval_week1_runbook.md  macro_intel_v1.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.js
graphs/: company_analysis_graph.py  industry_refresh_graph.py  macro_daily_graph.py
industry/: models.py  prioritizer.py  repository.py  retriever.py  scheduler.py  schemas.py  service.py  triggers.py  updater.py
integration/: company_context_orchestrator.py  contract_adapters.py  industry_recheck_orchestrator.py  linkage_service.py  macro_industry_bridge.py  models.py  recheck_executor.py  repository.py
logs/: macro_eval_pack_latest.json  macro_intel_latest.json
macro/: mapper.py  models.py  notifier.py  repository.py  retriever.py  schemas.py  service.py  triggers.py  updater.py
scripts/: build_macro_eval_weekly_report.py  run_company_analysis.py  run_financial_data_update.py  run_macro_daily.py  (+11 more)
(+130 files in other folders)
