[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent-ultra"
version = "0.1.0"
description = "A-share research assistant v1 skeleton"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "SQLAlchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
